objects/SecurityTeamRole__c.object
<CustomObject>
    <fields>
        <fullName>Security_Engineer__c</fullName>
        <label>Security Engineer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Enginner_Duplicate_Error__c</fullName>
        <label>Security Enginner Duplicate Error</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Manager_Duplicate_Error__c</fullName>
        <label>Security Manager Duplicate Error</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Manager__c</fullName>
        <label>Security Manager</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Security Team Role</label>
</CustomObject>